--- a/steamstats-backend/src/main/resources/application.properties
+++ b/steamstats-backend/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=steamstats
-spring.datasource.url=jdbc:postgresql://localhost:5432/steamstats
-spring.datasource.username=postgres
-spring.datasource.password=zU42vgV7#1
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
